--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ env.py
 # ======================================
 /staticfiles/
 /media/
+/static/
 
 # ======================================
 # Logs
