Update .gitignore, add static URL prefix, and include new CSS, and image files

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ env.py
 # ======================================
 /staticfiles/
 /media/
-/static/
+# /static/
 
 # ======================================
 # Logs
